# vlm-offline-eval-benchmark

./: .gitignore  README.md  llm_judge.py  main.py  pyproject.toml  script.py  single-conf.json
gemma-4-E4B-5fps/json/: falling_off_chair_-5hw88bD4mE.json  falling_off_chair_-tTBQvmKfEs.json  falling_off_chair_06u5p4FNohA.json  falling_off_chair_0xJzTTPKfXo.json  falling_off_chair_1RZYhr6hly4.json  falling_off_chair_3Ctreec2zrQ.json  falling_off_chair_3Jd_MXqwIKc.json  falling_off_chair_5xlTi_-c7NY.json  falling_off_chair_6Bkk_IljKP4.json  falling_off_chair_8LsomoWHlK0.json  falling_off_chair_GotjwB_SgI0.json  falling_off_chair_IuWPZJHWVYA.json  falling_off_chair_N516jor-Y5I.json  falling_off_chair_QQmQnfEXdOE.json  falling_off_chair_W2237TK0wcI.json  falling_off_chair_WD87x58wRsE.json  falling_off_chair_XMKm4hjLFXk.json  falling_off_chair_XXN3CgCyEx4.json  falling_off_chair_YqW9B4aedKE.json  falling_off_chair_Zi0fm17UBZE.json  falling_off_chair_cGbA0ZsJ-tU.json  falling_off_chair_f2nOuIPchP8.json  falling_off_chair_f6ZwvW_FD7U.json  falling_off_chair_fDNX6WW_6jc.json  falling_off_chair_fxKsubHkXMc.json  falling_off_chair_gCqTxLReCus.json  falling_off_chair_kKhCkAkz1vk.json  falling_off_chair_kwh65tVZyik.json  falling_off_chair_l3U5BF9jUa4.json  falling_off_chair_p8o6EkXONhc.json  falling_off_chair_q6b9VXig4e0.json  falling_off_chair_qkCEuMm9vnY.json  falling_off_chair_sl_oBU2ukJ8.json  falling_off_chair_t3N44ZENWIQ.json  falling_off_chair_tCZvKt-dKdY.json  falling_off_chair_twnAqdZkDZ8.json  falling_off_chair_uG1ZPoaMync.json  falling_off_chair_vSyIph8s85U.json  falling_off_chair_wNk1F7W5LIQ.json  falling_off_chair_xFFQRtKizJk.json  (+3 more)
logs/gemma4_e4b/climbing_stair/: climbing_ladder_-1KMJ1BZ2mU.jsonl
scripts/: run_trt_container.sh
src/intelligence_eval/: __init__.py  __main__.py  config.py  dataset.py  results.py  runner.py  similarity.py
src/intelligence_eval/scoring/: __init__.py  base.py  bert.py  llm_judge.py  nli.py  similarity.py
src/realtime_eval/: PLAN.md  __init__.py  __main__.py
src/realtime_eval/core/: __init__.py  config.py  dataset.py  metrics.py  power.py
src/realtime_eval/pipeline/: __init__.py  analyze.py  runner.py  sweep.py  sweep_rt.py
src/vlm_eval/: cli.py  paths.py  video.py
src/vlm_eval/judge/: runner.py
tests/: tensorrt_test.sh  test_sweep_rt.py
utils/: llm.py
