[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-benchmark"
version = "0.1.0"
description = "Video VLM benchmark and LLM-as-a-judge tooling"
requires-python = ">=3.12,<3.13"
dependencies = [
  "transformers>=4.41",
  "accelerate>=0.30",
  "numpy>=1.24",
  "Pillow>=9.5",
  "openai>=1.0.0",
  "datasets>=2.14",
  "python-dotenv>=1.0.0",
  "torch==2.5.1; platform_machine == 'x86_64'",
  "torchvision==0.20.1; platform_machine == 'x86_64'",
  "torchaudio==2.5.1; platform_machine == 'x86_64'",
  "torch>=2.7; platform_machine == 'aarch64'",
  "torchvision>=0.22; platform_machine == 'aarch64'",
  "torchaudio>=2.7; platform_machine == 'aarch64'",
  "opencv-python-headless>=4.13.0.92",
]

[project.optional-dependencies]
# TensorRT-LLM backend for `realtime-bench sweep-rt`. Declared here to mark it an
# optional dependency, but it is NOT pip-installable alongside this project: its
# prebuilt wheels are ABI-locked to NVIDIA's private NGC PyTorch build (no public
# torch wheel matches). Run sweep-rt inside NVIDIA's TensorRT-LLM container
# instead -- see `scripts/run_trt_container.sh`. The dependency-metadata stub
# below keeps `uv lock`/`uv run` solvable despite this entry.
tensorrt = [
  "tensorrt-llm==1.2.1; platform_machine == 'aarch64'",
]

[project.scripts]
vlm-benchmark = "vlm_eval.cli:benchmark_main"
vlm-judge = "vlm_eval.cli:judge_main"
vlm-batch = "vlm_eval.cli:batch_main"
vlm-gpu-test = "vlm_eval.cli:gpu_test_main"

realtime-bench = "realtime_eval.__main__:main"

intelli-bench = "intelligence_eval.__main__:main"
intelligence-bench = "intelligence_eval.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Grace-Blackwell (Spark, aarch64) needs cu128 sbsa wheels; cu121 has no aarch64 build.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# The `tensorrt` extra is never pip-installed here (runs in the NGC container),
# but it still appears in the universal lock. Declaring empty metadata keeps
# `uv lock`/`uv run` solvable without uv trying to build tensorrt-llm's PyPI
# placeholder wheel to read its deps.
[[tool.uv.dependency-metadata]]
name = "tensorrt-llm"
version = "1.2.1"
requires-dist = []

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
]
